# Vizify

./: CMakeLists.txt  MrVizify.pro  MrVizifyConfig.h.in  README.md  cdicom.cpp  cdicom.h  cfileloader.cpp  cfileloader.h  citk.cpp  citk.h  citkdicom.cpp  citkdicom.h  cmrvizthreshold.cpp  cmrvizthreshold.h  cmrvizthreshold.ui  cthresholdfactory.cpp  cthresholdfactory.h  cthresholdobject.cpp  cthresholdobject.h  cvtkwidget.cpp  cvtkwidget.h  dataobjects.h  main.cpp  mrvizifymain.cpp  mrvizifymain.h  mrvizifymain.ui  thresholdobjects.h
.github/workflows/: build_cmake.yml
dependencies/: CMakeLists.txt
